--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,17 @@
     max-width: 100%;
 }
 
+ul{
+    padding-left: 0;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: #222;
+}
+
+
 .home-nav-list ul li{
     max-width: 25%;
 }
@@ -38,3 +49,66 @@
     padding-left: 5px;
 }
 
+.home-main-carousel-one{
+    background-color: purple;
+}
+
+.home-main-carousel-one .carousel-inner .active{
+    min-height: 400px;
+}
+
+.home-main-carousel-two .item-header{
+    background-color: #907ABB;
+}
+
+.home-main-carousel-two .item-content{
+    background-color: #907ABB;
+}
+
+.home-main-carousel-two .item-content img,
+.home-main-carousel-two .item-content p{
+    min-height: 210px;
+    width: 100%;
+    border: 3px solid #fff;
+    border-radius: 10px;
+}
+
+.home-main-carousel-two .item-content p{
+    padding: 10px;
+    min-height: 200px;
+    background-color: #01A0C7;
+}
+
+.home-blog-section{
+    background-color: purple;
+    color: #fff;
+    
+}
+
+.home-video-section{
+    background-color: #336799;
+}
+
+.home-video-section .video-box h5{
+    background-color: #037ABC;
+}
+
+
+footer .container{
+    background-color: #5C1484;
+    color: #fff;
+}
+
+footer .container ul li{
+    margin-bottom: 5px;
+}
+
+footer .container ul li a{
+    color: #fff;
+    transition: 0.5s ease-in;
+}
+
+footer .container ul li a:hover{
+    color: #037ABC;
+    padding-left: 5px;
+}
