--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+.main-manu .nav-item:hover{
+    background-color: #4d080f!important;
+    transition: all 0.2s ease-in;
+}
+
 .home-header-carousel img{
     height: 210px;
     max-width: 100%;
@@ -42,7 +47,7 @@ a{
 .home-main-leftbar ul li a{
     text-decoration: none;
     color: #222;
-    transition: 0.5s ease-in;
+    transition: all 0.5s ease-in;
 }
 
 .home-main-leftbar ul li a:hover{
@@ -79,10 +84,28 @@ a{
     background-color: #01A0C7;
 }
 
+.home-main-carousel-two .item-content p{
+    min-height: 210px;
+    width: 100%;
+    border: 3px solid #fff;
+    border-radius: 10px;
+}
+
 .home-blog-section{
     background-color: purple;
     color: #fff;
-    
+}
+
+.home-blog-section .content-box{
+    min-height: 210px;
+    width: 100%;
+    border: 3px solid #fff;
+    border-radius: 10px;
+    padding: 5px
+}
+
+.home-blog-section .content-box .col-5 p{
+    font-size: 0.8rem;
 }
 
 .home-video-section{
@@ -105,10 +128,21 @@ footer .container ul li{
 
 footer .container ul li a{
     color: #fff;
-    transition: 0.5s ease-in;
+    transition: all 0.5s ease-in;
 }
 
 footer .container ul li a:hover{
     color: #037ABC;
     padding-left: 5px;
+}
+
+footer hr:not([size]){
+    height: 3px;
+    width: 85%;
+    margin: auto;
+    margin-bottom: 15px;
+}
+
+@media only screen and (max-width: 991px) {
+    
 }
