--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,21 @@
     background-color: #5C1484
 }
 
+.text-lightblue{
+    color: #037ABC;
+}
+
+.bg-lightgreen{
+    transition: all 0.5s ease-in;
+    background-color: #54af05;
+}
+
+.bg-lightgreen:hover{
+    background-color: #54af60;
+}
+
+
+
 /* sticky navbar */
 #navbar {
     overflow: hidden;
@@ -24,7 +39,6 @@
 .sticky + .content {
 padding-top: 60px;
 }
-
 
 
 
@@ -269,6 +283,39 @@ footer hr:not([size]){
     transform: scale(1.1);
     filter: grayscale(0%)
 }
+
+
+/* Contact Page */
+.contact h3{
+    font-weight: 700;
+}
+
+.contact-with-us .contact-type span{
+    color: #54af05;
+    font-size: 2.5rem;
+}
+
+.contact-with-us .contact-type h2{
+    font-size: 1.2rem;
+    margin-top: 10px;
+    color: #333;
+    transition: all 0.5s ease-in;
+}
+
+.contact-with-us .contact-type a{
+    color: #333;
+    transition: all 0.5s ease-in;
+    font-weight: 600;
+}
+
+.contact-with-us .contact-type:hover h2{
+    color: #54af05;
+}
+
+.contact-with-us .contact-type a:hover{
+    color: #037ABC;
+}
+
 
 @media only screen and (max-width: 991px) {
     
