navbar mobile view issue fix, two pages added

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -346,4 +346,7 @@ footer hr:not([size]){
 
 @media only screen and (max-width: 991px) {
     
+.home-nav-list ul li{
+        max-width: 100%;
+    }
 }
