--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,7 +54,7 @@ li{
 }
   
 .sticky .nav-item .nav-link{
-    color: #444!important;
+    color: navy!important;
 }
 
 .sticky + .content {
@@ -65,21 +65,18 @@ li{
     border-bottom: 2px solid #54af05;
 }
 
+.navbar-brand img{
+    max-height: 60px;
+    max-width: 60px;
+}
+
 .navbar .nav-item .nav-link,
 .navbar .dropdown .dropdown-menu .dropdown-item{
     font-weight: 600!important;
-    /* color: #000; */
+    color: navy;
     font-size: 0.9rem;
-    background: -webkit-linear-gradient(#5C1484,#262727);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    
 }
-/* 
-.navbar .nav-item .nav-link {
-    background: -webkit-linear-gradient(#eee, #333);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  } */
 
 .navbar .nav-item{
     padding-right: 10px!important;
@@ -90,10 +87,28 @@ li{
     transition: all 0.2s ease-in;
 }
 
-.home-header-carousel img{
-    height: 210px;
+.home-header-carousel > img{
+    max-height: 500px;
     max-width: 100%;
 }
+
+.slider-logo{
+    text-align: left;
+    margin-left: -180px;
+    margin-bottom: -20px;
+}
+
+.slider-logo .logo{
+    height: 90px;
+    width: 90px;
+    border-radius: 20%;
+}
+
+.slider-logo span{
+    font-size: 1.55rem;
+    margin-bottom: -30px;
+}
+
 
 .navbar .navbar-nav .active{
     border-bottom: 3px solid #54af05!important;
@@ -162,6 +177,14 @@ a{
     padding-left: 5px;
 }
 
+.notice-board li a img{
+    max-height: 200px;
+}
+
+.notice-board li a:hover{
+    padding-left:0!important;
+}
+
 .home-main-carousel-one .carousel-indicators button{
     background-color: #333;
 }
@@ -204,6 +227,11 @@ a{
     border-radius: 10px;
 }
 
+.home-main-carousel-two img{
+    max-height: 250px;
+    max-width: 100%;
+}
+
 .home-blog-section{
     background-color: purple;
     color: #fff;
@@ -226,6 +254,11 @@ a{
     font-size: 0.8rem;
 }
 
+.home-blog-section img{
+    max-height: 250px;
+    max-width: 100%;
+}
+
 .home-video-section{
     background-color: #336799;
 }
@@ -233,7 +266,6 @@ a{
 .home-video-section .video-box h5{
     background-color: #037ABC;
 }
-
 
 footer{
     /* background-color: #5C1484; */
